// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task component Checkbox Should render complete checkbox 1`] = `
<div
  className="checkbox checkbox--tasks-list is-checked"
  onClick={[Function]}
>
  <svg
    className="checkbox__checkmark"
    viewBox="0 0 17 14"
  >
    <path
      className="checkbox__checkmark-path"
      d="M15.0328152,0.000721764681 C13.8445596,0.691568051 12.2970639,2.12852833 11.2746114,3.04044543 C9.22970639,4.86427962 7.26770294,6.77101537 5.33333333,8.70538498 L1.46459413,5.3340551 L-1.5720758e-13,6.77101537 C2.12780656,8.89882194 4.42141623,11.1924316 6.30051813,13.5689428 C8.70466321,9.61730208 12.6286701,3.95236252 16,0.967906566 C15.8894646,0.746835754 15.4196891,-0.0269120868 15.0328152,0.000721764681 Z"
    />
  </svg>
</div>
`;

exports[`Task component Checkbox Should render uncomplete checkbox 1`] = `
<div
  className="checkbox checkbox--tasks-list"
  onClick={[Function]}
>
  <svg
    className="checkbox__checkmark"
    viewBox="0 0 17 14"
  >
    <path
      className="checkbox__checkmark-path"
      d="M15.0328152,0.000721764681 C13.8445596,0.691568051 12.2970639,2.12852833 11.2746114,3.04044543 C9.22970639,4.86427962 7.26770294,6.77101537 5.33333333,8.70538498 L1.46459413,5.3340551 L-1.5720758e-13,6.77101537 C2.12780656,8.89882194 4.42141623,11.1924316 6.30051813,13.5689428 C8.70466321,9.61730208 12.6286701,3.95236252 16,0.967906566 C15.8894646,0.746835754 15.4196891,-0.0269120868 15.0328152,0.000721764681 Z"
    />
  </svg>
</div>
`;

exports[`Task component Should render Task component with active and completed classes 1`] = `
<li
  className="task is-completed is-active"
>
  <Checkbox
    appearance="tasks-list"
    checked={true}
    dimmed={false}
    onChange={[Function]}
  />
  <Today
    appearance="tasks-list"
    checked={false}
    disabled={true}
    onClick={[Function]}
  />
  <Priority
    appearance="tasks-list"
    disabled={true}
    onClick={[Function]}
  />
  <div
    className="task__body"
    onClick={[Function]}
  >
    <div
      className="task__main"
    >
      <div
        className="task__title"
      >
        test title
      </div>
    </div>
    <div
      className="task__extra"
    />
  </div>
  <Stopwatch
    appearance="tasks-list"
    disabled={true}
    onClick={[Function]}
  />
</li>
`;

exports[`Task component Should render Task component without active and completed classes 1`] = `
<li
  className="task"
>
  <Checkbox
    appearance="tasks-list"
    checked={false}
    dimmed={false}
    onChange={[Function]}
  />
  <Today
    appearance="tasks-list"
    checked={false}
    disabled={false}
    onClick={[Function]}
  />
  <Priority
    appearance="tasks-list"
    disabled={false}
    onClick={[Function]}
  />
  <div
    className="task__body"
    onClick={[Function]}
  >
    <div
      className="task__main"
    >
      <div
        className="task__title"
      >
        test title
      </div>
    </div>
    <div
      className="task__extra"
    />
  </div>
  <Stopwatch
    appearance="tasks-list"
    disabled={false}
    onClick={[Function]}
  />
</li>
`;

exports[`Task component Task Body Should render task date 1`] = `
<div
  className="task__date"
>
  May 15, 2015
</div>
`;

exports[`Task component Task Body Should render task description 1`] = `
<div
  className="task__description"
>
  Make Tutorial on oficial react website
</div>
`;

exports[`Task component Task Body Should render task title 1`] = `
<div
  className="task__title"
>
  Explore React
</div>
`;

exports[`Task component Today Should render checked today toggle 1`] = `
<div
  className="today today--tasks-list is-checked"
  onClick={[Function]}
>
  <svg
    className="today__svg"
    viewBox="0 0 26 26"
  >
    <circle
      className="today__beams"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
    <circle
      className="today__beams--active"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
  </svg>
</div>
`;

exports[`Task component Today Should render unchecked today toggle 1`] = `
<div
  className="today today--tasks-list"
  onClick={[Function]}
>
  <svg
    className="today__svg"
    viewBox="0 0 26 26"
  >
    <circle
      className="today__beams"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
    <circle
      className="today__beams--active"
      cx="13"
      cy="13"
      fill="none"
      r="13"
    />
  </svg>
</div>
`;
